infra-k8s/prometheus/monitoring.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-forum-api
  namespace: lab
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus-forum-api
        image: prom/prometheus:latest
        args:
          - '--config.file=/etc/prometheus/prometheus.yml'
          - '--storage.tsdb.path=/prometheus'
          - '--web.console.libraries=/etc/prometheus/console_libraries'
          - '--web.console.templates=/etc/prometheus/consoles'
          - '--web.enable-lifecycle'
        ports:
          - containerPort: 9090
        volumeMounts:
          - name: prometheus-config-volume
            mountPath: /etc/prometheus/
          - name: prometheus-storage-volume
            mountPath: /prometheus
      volumes:
        - name: prometheus-config-volume
          configMap:
            defaultMode: 420
            name: prometheus-server-conf
        - name: alert-config
          configMap:
            defaultMode: 420
            name: alertrules    
        - name: mysql-data
          persistentVolumeClaim:
            claimName: prometheus-data-disk    
  
        - name: prometheus-storage-volume
          emptyDir: {}
