infra-k8s/prometheus/svc-monitoring.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-forum-api
  namespace: lab
spec:
  type: ClusterIP
  ports:
  - name: prometheus-forum-api
    port: 9090
    targetPort: 9090
  selector:
    app: prometheus
